underline fix for wrapping lines

--- a/_typography.scss
+++ b/_typography.scss
@@ -56,6 +56,7 @@ a, a:visited, a:active {
 
 a:after, a:visited:after, a:active:after {
 	border-bottom: 1px solid;
+	width: 100%;
 	content:'';
     position:absolute;
     left:0;
@@ -63,8 +64,12 @@ a:after, a:visited:after, a:active:after {
     bottom:(-2/14) + rem;
 }
 
-h1 a:after, h2 a:after, h3 a:after  {
+h2 a:after, h3 a:after  {
 	bottom: (3/14) + rem;
+}
+
+h1 a:after  {
+	border: none;
 }
 
 a:hover, a:visited:hover {
